upgrade data_structure

--- a/data_structure/二叉树的遍历.md
+++ b/data_structure/二叉树的遍历.md
@@ -1,3 +1,45 @@
+- [二叉树理论基础](#二叉树理论基础)
+- [二叉树的前中后序遍历（递归）](#二叉树的前中后序遍历递归)
+  - [前序遍历](#前序遍历)
+  - [中序遍历](#中序遍历)
+  - [后序遍历](#后序遍历)
+- [二叉树的前中后序遍历（迭代）](#二叉树的前中后序遍历迭代)
+  - [前序遍历](#前序遍历-1)
+  - [中序遍历](#中序遍历-1)
+  - [后序遍历](#后序遍历-1)
+- [二叉树的层序遍历](#二叉树的层序遍历)
+- [二叉树遍历有关的题目](#二叉树遍历有关的题目)
+  - [leetcode.144 二叉树的前序遍历](#leetcode144-二叉树的前序遍历)
+  - [leetcode.94 二叉树的中序遍历](#leetcode94-二叉树的中序遍历)
+  - [leetcode.145 二叉树的后序遍历](#leetcode145-二叉树的后序遍历)
+  - [leetcode.226 反转二叉树](#leetcode226-反转二叉树)
+  - [leetcode.589 N 叉树的前序遍历](#leetcode589-n-叉树的前序遍历)
+  - [leetcode.590 N 叉树的后序遍历](#leetcode590-n-叉树的后序遍历)
+
+***
+### 二叉树理论基础
+1. 满二叉树：顾名思义就是二叉树的所有节点都是有值的，没有空节点，如果二叉树深度为 $k$，那么满二叉树有 $2^k-1$ 个节点
+2. 完全二叉树：除了最底层节点没有填满外，其余每层节点都填满了，且最底层节点一定是从左到右填
+3. 二叉搜索树：二叉搜索树的中序遍历是从小到大排序的  
+   - 若它的左子树不空，则左子树上所有结点的值均小于它的根结点的值
+   - 若它的右子树不空，则右子树上所有结点的值均大于它的根结点的值
+   - 它的左、右子树也分别为二叉排序树
+4. 平衡二叉搜索树：平衡二叉搜索树要么是空树，要么其左右两个子树的高度差不超过 $1$，并且左右两个子树都是平衡二叉搜索树  
+**C++中map、set、multimap，multiset的底层实现都是平衡二叉搜索树**
+5. 二叉树的遍历方式：
+   - 前序遍历（根节点->左子树->右子树）
+   - 中序遍历（左子树->根节点->右子树）
+   - 后序遍历（左子树->右子树->根节点）
+   - 层序遍历
+6. 二叉树的定义：
+```
+struct TreeNode {
+    int val;
+    TreeNode* left;
+    TreeNode* right;
+    TreeNode(int x): val(x), left(NULL), right(NULL) {}
+}*root;
+```
 ### 二叉树的前中后序遍历（递归）
 #### 前序遍历
 ```
@@ -49,17 +91,16 @@ void dfs(TreeNode* root){
 ```
 ### 二叉树的前中后序遍历（迭代）
 #### 前序遍历
-- 思路：二叉树的迭代遍历一般用栈来存储  
-栈是先进后出的顺序，如果是前序遍历，输出为中->左->右，所以先将右儿子入栈，再将左儿子入栈  
-- 模板解法：
+- 思路：二叉树的迭代遍历一般用栈来存储
   1. 初始化栈
   2. 当前节点赋值为根节点
-  3. 将根节点和所有左孩子入栈并加入答案直至当前节点为空
-  4. 每弹出一个栈顶元素就到达当前节点的右孩子
-- 代码模板
+  3. 将根节点和所有左子树入栈并加入答案直至当前节点为空
+  4. 每弹出一个栈顶元素就到达当前节点的右子树
+- 代码模板 1
 ```
 stack<TreeNode*> stk;
 vector<int> res;
+
 auto cur = root;
 while (cur || stk.size()){
     while (cur){
@@ -72,60 +113,47 @@ while (cur || stk.size()){
     cur = tmp->right;
 }
 ```
-- 常规解法：
-  1. 初始化栈
-  2. 将根节点入栈
-  3. 当栈不为空将栈顶元素记录弹出加入答案
-  4. 如果元素有右儿子则将右儿子入栈，如果有左儿子则将左儿子入栈
-- 代码模板
+- 代码模板 2
 ```
 stack<TreeNode*> stk;
 vector<int> res;
+
 if (root) stk.push(root);
 while (stk.size()){
-    auto c = stk.top();
+    auto cur = stk.top();
     stk.pop();
-    res.push_back(c->val);
-    if (c->right) stk.push(c->right);
-    if (c->left) stk.push(c->left);
+    res.push_back(cur->val);
+    if (cur->right) stk.push(cur->right);
+    if (cur->left) stk.push(cur->left);
 }
 ```
 #### 中序遍历
-- 思路：与前序遍历的模板解法相似，区别是前序遍历中在找树的左底部的过程中记录答案，而中序遍历是找到左底部再开始记录答案
-- 模板解法：
-  1. 初始化栈
-  2. 当前节点赋值为根节点
-  3. 将根节点和所有左孩子入栈直至当前节点为空
-  4. 每弹出一个栈顶元素加入答案并到达当前节点的右孩子
+- 思路：与前序遍历的模板 1 相似，区别是前序遍历中在找树的左底部的过程中记录答案，而中序遍历是找到左底部再开始记录答案
 - 代码模板
 ```
 stack<TreeNode*> stk;
 vector<int> res;
+
 auto cur = root;
 while (cur || stk.size()){
     while (cur){
         stk.push(cur);
         cur = cur->left;
     }
-    auto temp = stk.top();
+    auto tmp = stk.top();
     stk.pop();
-    res.push_back(temp->val);
-    cur = temp->right;
+    res.push_back(tmp->val);
+    cur = tmp->right;
 }
 ```
 #### 后序遍历
-- 思路：与前序遍历的模板解法类似  
+- 思路：与前序遍历的模板 1 类似  
 栈是先进后出的顺序，如果是后序遍历，输出为左->右->中，和前序遍历中->左->右相比，可以在前序遍历的基础上将输入改为中->右->左，再将答案数组反转即为左->右->中
-- 模板解法：
-  1. 初始化栈
-  2. 当前节点赋值为根节点
-  3. 将根节点和所有右孩子入栈并加入答案直至当前节点为空
-  4. 每弹出一个栈顶元素就到达当前节点的左孩子
-  5. 反转答案数组
-- 代码模板
+- 代码模板 1
 ```
 stack<TreeNode*> stk;
 vector<int> res;
+
 auto cur = root;
 while (cur || stk.size()){
     while (cur){
@@ -133,11 +161,26 @@ while (cur || stk.size()){
         res.push_back(cur->val);
         cur = cur->right;
     }
-    auto temp = stk.top();
+    auto tmp = stk.top();
     stk.pop();
-    cur = temp->left;
+    cur = tmp->left;
 }
 reverse(res.begin(), res.end());
+```
+- 代码模板 2  
+与前序遍历的代码模板 2 类似
+```
+stack<TreeNode*> stk;
+vector<int> res;
+
+if (root) stk.push(root);
+while (stk.size()){
+    auto cur = stk.top();
+    stk.pop();
+    res.push_back(cur->val);
+    if (cur->left) stk.push(cur->left);
+    if (cur->right) stk.push(cur->right);
+}
 ```
 ### 二叉树的层序遍历
 - 思路：二叉树的前中后序遍历都是用深度优先搜索的方法（dfs）主要使用栈实现，层序遍历是广度优先搜索主要使用队列实现
@@ -151,6 +194,7 @@ reverse(res.begin(), res.end());
 ```
 queue<TreeNode*> q;
 vector<int> res;
+
 q.push(root);
 while (q.size()){
     int n = q.size();
@@ -163,12 +207,18 @@ while (q.size()){
     }
 }
 ```
-### 二叉树有关的题目和二叉树遍历的关系
-#### leetcode.226
+### 二叉树遍历有关的题目
+#### leetcode.144 二叉树的前序遍历
+- 链接<https://leetcode.cn/problems/binary-tree-preorder-traversal/>
+#### leetcode.94 二叉树的中序遍历
+- 链接<https://leetcode.cn/problems/binary-tree-inorder-traversal/>
+#### leetcode.145 二叉树的后序遍历
+- 链接<https://leetcode.cn/problems/binary-tree-postorder-traversal/>
+#### leetcode.226 反转二叉树
 - 链接<https://leetcode.cn/problems/invert-binary-tree/>  
 - 解题方法：有三种方法解本道题  
-  从上到下遍历树的时候翻转左右节点->前序遍历
-  遍历到树的叶子节点回溯的时候翻转左右节点->后序遍历
+  从上到下遍历树的时候翻转左右节点->前序遍历  
+  遍历到树的叶子节点回溯的时候翻转左右节点->后序遍历  
   遍历每一层，将每一层的左右节点翻转->层序遍历
 - leetcode解题代码
 ```
@@ -220,9 +270,9 @@ public:
     }
 };
 ```
-#### leetcode.589
+#### leetcode.589 N 叉树的前序遍历
 - 链接<https://leetcode.cn/problems/n-ary-tree-preorder-traversal/>  
-- 解题方法：前序遍历递归模板或前序遍历迭代常规解法模板
+- 解题方法：前序遍历模板
 - leetcode解题代码
 ```
 class Solution {
@@ -257,9 +307,9 @@ public:
     }
 };
 ```
-#### leetcode.590
+#### leetcode.590 N 叉树的后序遍历
 - 链接<https://leetcode.cn/problems/n-ary-tree-postorder-traversal/>  
-- 解题方法：后序遍历递归模板或后序遍历迭代常规解法模板
+- 解题方法：后序遍历模板
 - leetcode解题代码
 ```
 class Solution {
