--- a/data_structure/哈希表.md
+++ b/data_structure/哈希表.md
@@ -1,5 +1,82 @@
-### 哈希表
-#### leetcode.1
+- [哈希表理论基础](#哈希表理论基础)
+- [哈希表中常见的面试题型](#哈希表中常见的面试题型)
+- [哈希表题型](#哈希表题型)
+  - [leetcode.242 有效的字母异位词](#leetcode242-有效的字母异位词)
+  - [leetcode.383 赎金信](#leetcode383-赎金信)
+  - [leetcode.1 两数之和](#leetcode1-两数之和)
+  - [leetcode.454 四数相加 II](#leetcode454-四数相加-ii)
+  - [leetcode.49 字母异位词分组](#leetcode49-字母异位词分组)
+- [哈希集合题型](#哈希集合题型)
+  - [leetcode.349 两个数组的交集](#leetcode349-两个数组的交集)
+  - [leetcode.350 两个数组的交集 II](#leetcode350-两个数组的交集-ii)
+  - [leetcode.202 快乐数](#leetcode202-快乐数)
+
+***
+### 哈希表理论基础
+1. 哈希表是根据关键码的值而直接进行访问的数据结构，又叫做散列表，一般哈希表都是用来快速判断一个元素是否出现集合里
+2. 解决哈希碰撞有两种方法：拉链法，开放寻址法
+3. 常见的哈希结构（c++）set 和 map
+
+| 集合               | 底层实现 | 是否有序 | 数值是否可以重复 | 查询效率 | 增删效率 |
+| :----------------- | :------- | :------- | :--------------- | :------- | :------- |
+| std::set           | 红黑树   | 有序     | 否               | O(log n) | O(log n) |
+| std::multiset      | 红黑树   | 有序     | 是               | O(logn)  | O(logn)  |
+| std::unordered_set | 哈希表   | 无序     | 否               | O(1)     | O(1)     |
+
+std::unordered_set 底层实现为哈希表，std::set 和 std::multiset 的底层实现是红黑树，红黑树是一种平衡二叉搜索树，所以 key 值是有序的，但 key 不可以修改，改动 key 值会导致整棵树的错乱，所以只能删除和增加。
+
+| 映射               | 底层实现 | 是否有序 | key是否可以重复 | 查询效率 | 增删效率 |
+| :----------------- | :------- | :------- | :-------------- | :------- | :------- |
+| std::map           | 红黑树   | key有序  | 否              | O(log n) | O(log n) |
+| std::multimap      | 红黑树   | key有序  | 是              | O(logn)  | O(logn)  |
+| std::unordered_map | 哈希表   | key无序  | 否              | O(1)     | O(1)     |
+
+std::unordered_map 底层实现为哈希表，std::map 和std::multimap 的底层实现是红黑树。同理，std::map 和std::multimap 的 key 也是有序的  
+
+**使用集合来解决哈希问题的时候，优先使用 unordered_set，因为它的查询和增删效率是最优的，如果需要集合是有序的，那么就用 set，如果要求不仅有序还要有重复数据的话，那么就用 multiset**
+
+### 哈希表中常见的面试题型
+1. 利用哈希表（map，set）的性质解题
+2. 双指针算法（滑动窗口）（见双指针算法总结）
+### 哈希表题型
+#### leetcode.242 有效的字母异位词
+- 链接<https://leetcode.cn/problems/valid-anagram/>  
+- 解题方法：哈希表  
+  将两个字符串存入两个哈希表并记录每个字符出现的次数  
+  每个字符出现的次数相等则返回 true ，否则返回 false 
+- leetcode解题代码
+```
+class Solution {
+public:
+    bool isAnagram(string s, string t) {
+        unordered_map<char, int> a, b;
+        for (auto c: s) a[c] ++;
+        for (auto c: t) b[c] ++;
+        return a == b;
+    }
+};
+```
+#### leetcode.383 赎金信
+- 链接<https://leetcode.cn/problems/ransom-note/>  
+- 解题方法：哈希表  
+  将字符串 b 存入哈希表，如果字符串 a 中出现了哈希表中没有的字符直接返回 false  
+  如果出现了哈希表中存在的字符则哈希表的 value-1
+- leetcode解题代码
+```
+class Solution {
+public:
+    bool canConstruct(string ransomNote, string magazine) {
+        unordered_map<char, int> hash;
+        for (auto c: magazine) hash[c] ++;
+        for (auto c: ransomNote){
+            if (!hash[c]) return false;
+            hash[c] --;
+        }
+        return true;
+    }
+};
+```
+#### leetcode.1 两数之和
 - 链接<https://leetcode.cn/problems/two-sum/>  
 - 解题方法：哈希表  
   将数组元素存入哈希表，遍历数组求差，差值如果在哈希表中存在则返回下标
@@ -9,6 +86,7 @@ class Solution {
 public:
     vector<int> twoSum(vector<int>& nums, int target) {
         unordered_map<int, int> hash;
+
         for (int i = 0; i < nums.size(); i ++){
             int cur = target - nums[i];
             if (hash.count(cur)) return {hash[cur], i};
@@ -18,11 +96,11 @@ public:
     }
 };
 ```
-#### leetcode.454
+#### leetcode.454 四数相加 II
 - 链接<https://leetcode.cn/problems/4sum-ii/>  
 - 解题方法：哈希表  
-  a+b+c+d = 0 => a+b=-(c+d)  
-  将a+b的和x存入哈希表，如果哈希表中存在-x则为答案
+  `a+b+c+d = 0 => a+b=-(c+d)`  
+  遍历 nums1 nums2 将 a+b 的和 x 存入哈希表，遍历 nums3   nums4 哈希表中有多少个 -x 就说明有多少个符合条件的组合
 - leetcode解题代码
 ```
 class Solution {
@@ -43,52 +121,14 @@ public:
     }
 };
 ```
-#### leetcode.242
-- 链接<https://leetcode.cn/problems/valid-anagram/>  
-- 解题方法：哈希表  
-  将两个字符串存入两个哈希表并记录每个字符出现的次数
-  每个字符出现的次数相等则返回true，否则返回false
-- leetcode解题代码
-```
-class Solution {
-public:
-    bool isAnagram(string s, string t) {
-        unordered_map<char, int> a, b;
-        for (auto c: s) a[c] ++;
-        for (auto c: t) b[c] ++;
-        return a == b;
-    }
-};
-```
-#### leetcode.383
-- 链接<https://leetcode.cn/problems/ransom-note/>  
-- 解题方法：哈希表  
-  题意是判断字符串a是否是字符串b的子集  
-  将字符串b存入哈希表，如果字符串a中出现了哈希表中没有的字符直接返回false  
-  如果出现了哈希表中存在的字符则哈希表的value-1
-- leetcode解题代码
-```
-class Solution {
-public:
-    bool canConstruct(string ransomNote, string magazine) {
-        unordered_map<char, int> hash;
-        for (auto c: magazine) hash[c] ++;
-        for (auto c: ransomNote){
-            if (!hash[c]) return false;
-            hash[c] --;
-        }
-        return true;
-    }
-};
-```
-#### leetcode.49
+#### leetcode.49 字母异位词分组
 - 链接<https://leetcode.cn/problems/group-anagrams/>  
 - 解题方法：哈希表  
   哈希表中存{key:["","",""]}  
   例如{"abc":["abc","acb","cba"]}  
   将所有的字符串按字典序排序，如果是字母异位词则一定有相同的字典序  
   如"abc","acb","cba"它们的字典序都是"abc"  
-  key存字典序，value存有相同字典序的字符串
+  key 存字典序，value 存有相同字典序的字符串
 - leetcode解题代码
 ```
 class Solution {
@@ -107,89 +147,12 @@ public:
     }
 };
 ```
-### 哈希表+滑动窗口
-#### leetcode.567
-- 链接<https://leetcode.cn/problems/permutation-in-string/>  
-- 解题方法：哈希表+滑动窗口
-  哈希表存两个字符串，短串称为S1，长串称为S2  
-  维护滑动窗口左右两个端点[l, r]和计数器  
-  例如：如果短串中字符a出现了3次，滑动窗口中字符a也出现了3次则计数器+1    
-  滑动窗口右端点一直移动直到找到所有短串中出现的字符  
-  右端点每移动一次，如果长串中记录过当前字符S2++，如果S1中字符出现的次数等于S2中字符出现的次数则计数器+1  
-  当窗口大小大于短串的大小，如果计数器计数等于S1的大小，输出答案  
-  右端点不动，左端点开始移动  
-  重复上述过程直到右端点走到长串结尾
-- leetcode解题代码
-```
-class Solution {
-public:
-    bool checkInclusion(string s1, string s2) {
-        unordered_map<char, int> s1hash, s2hash;
-        for (auto c: s1) s1hash[c] ++;
-
-        int l = 0, r = 0, cnt = 0;
-
-        while (r < s2.size()){
-            char a = s2[r];
-            r ++;
-            if (s1hash.count(a)){
-                s2hash[a] ++;
-                if (s1hash[a] == s2hash[a]) cnt ++;
-            }
-            while (r - l + 1 > s1.size()){
-                if (cnt == s1hash.size()) return true;
-                char b = s2[l];
-                l ++;
-                if (s1hash.count(b)){
-                    if (s1hash[b] == s2hash[b]) cnt --;
-                    s2hash[b] --;
-                }
-            }
-        }
-        return false;
-    }
-};
-```
-#### leetcode.438
-- 链接<https://leetcode.cn/problems/find-all-anagrams-in-a-string/>  
-- 解题方法：哈希表+滑动窗口
-- leetcode解题代码
-```
-class Solution {
-public:
-    vector<int> findAnagrams(string s, string p) {
-        unordered_map<char, int> shash, phash;
-        for (auto c: p) phash[c] ++;
-        
-        int l = 0, r = 0, cnt = 0;
-        vector<int> res;
-
-        while (r < s.size()){
-            char a = s[r];
-            r ++;
-            if (phash.count(a)){
-                shash[a] ++;
-                if (shash[a] == phash[a]) cnt ++;
-            }
-            while (r - l + 1 > p.size()){
-                if (cnt == phash.size()) res.push_back(l);
-                char b = s[l];
-                l ++;
-                if (phash.count(b)){
-                    if (shash[b] == phash[b]) cnt --;
-                    shash[b] --;
-                }
-            }
-        }
-        return res;
-    }
-};
-```
-### 哈希表（集合）
-#### leetcode.349
+### 哈希集合题型
+#### leetcode.349 两个数组的交集
 - 链接<https://leetcode.cn/problems/intersection-of-two-arrays/>  
-- 解题方法：哈希表  
-  unordered_set不包含重复元素，key=value
+- 解题方法：哈希集合  
+  unordered_set 不包含重复元素，key=value  
+  将 num1 中的元素加入集合中，遍历 nums2 中的元素，如果集合中有相同的元素说明是交集，加入答案数组，并把当前元素从集合中删除
 - leetcode解题代码
 ```
 class Solution {
@@ -209,10 +172,11 @@ public:
     }
 };
 ```
-#### leetcode.350
+#### leetcode.350 两个数组的交集 II
 - 链接<https://leetcode.cn/problems/intersection-of-two-arrays-ii/submissions/>  
-- 解题方法：哈希表  
-  unordered_multiset可以包含重复元素，key=value
+- 解题方法：哈希集合  
+  unordered_multiset 可以包含重复元素，key=value  
+  和上一题思路类似
 - leetcode解题代码
 ```
 class Solution {
@@ -220,6 +184,7 @@ public:
     vector<int> intersect(vector<int>& nums1, vector<int>& nums2) {
         unordered_multiset<int> mtset;
         vector<int> res;
+
         for (auto c: nums1) mtset.insert(c);
         for (auto c: nums2){
             if (mtset.count(c)){
@@ -231,4 +196,28 @@ public:
     }
 };
 ```
+#### leetcode.202 快乐数
+- 链接<https://leetcode.cn/problems/happy-number/submissions/>  
+- 解题方法：哈希集合  
+  通过集合判断一个数是否重复出现过，如果重复出现说明这个数陷入了循环直接返回 false，否则返回 true，用 res 记录每一次计算的结果并更新 n
+- leetcode解题代码
+```
+class Solution {
+public:
+    bool isHappy(int n) {
+        unordered_set<int> set;
 
+        while (n != 1){
+            int res = 0;
+            while (n){
+                res += (n % 10) * (n % 10);
+                n /= 10;
+            }
+            if (set.count(res)) return false;
+            set.insert(res);
+            n = res;
+        }
+        return true;
+    }
+};
+```
